--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@id/arrow"
-        android:layout_marginRight="-10dp"
+        android:layout_marginRight="-30dp"
         android:background="@color/black"
         android:padding="30dp"
         android:text="DCA"
@@ -56,17 +56,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="-20dp"
+        android:layout_marginLeft="-30dp"
         android:layout_toRightOf="@id/arrow"
         android:background="@color/black"
         android:padding="30dp"
         android:text="Mars" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="------"
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="80dp"
+        android:src="@drawable/arrow"
         android:id="@+id/arrow"
-        android:background="@color/black"
         android:textSize="40dp"
         android:layout_centerInParent="true"
         android:paddingVertical="10dp"/>
